<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInStuff.Registration">

    <LinearLayout
        android:id="@+id/logInAsContainer"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/white"
            android:text="@string/register_as"
            android:textSize="35sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/adminRegistration"
            android:layout_marginTop="20dp"
            android:layout_width="170dp"
            android:drawableTint="@color/black"
            android:drawableLeft="@drawable/ic_admin_with_cogwheels"
            app:drawableTint="@color/button_text_color"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:text="@string/admin"
            android:textColor="@color/button_text_color"
            app:buttonGradientStartColor="#CAE4CB"
            app:buttonGradientEndColor="@color/button_color"
            app:buttonCornerRadius="50dp"
            />

        
        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/userRegistration"
            android:layout_marginTop="20dp"
            android:layout_width="170dp"
            android:drawableLeft="@drawable/ic_user"
            app:drawableTint="@color/button_text_color"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:text="@string/user"
            android:textColor="@color/button_text_color"
            app:buttonGradientStartColor="#CAE4CB"
            app:buttonGradientEndColor="@color/button_color"
            app:buttonCornerRadius="50dp"
            />

    </LinearLayout>

</LinearLayout>