<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/binDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/binID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Bin ID:  "
        android:textSize="18sp" />

    <TextView
        android:id="@+id/binAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Address: "
        android:textSize="18sp" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="City:   "
        android:textSize="18sp" />

    <TextView
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="City:   "
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cycal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Cycle:   "
        android:textSize="18sp" />

    <TextView
        android:id="@+id/driverMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Driver Email: "
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bestRoote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/best_route"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="3.5">


        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/showMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/show_map"
            android:textSize="14sp"
            android:textColor="@color/button_text_color"
            app:buttonCornerRadius="50dp"
            app:buttonGradientEndColor="#6ACF10"
            app:buttonGradientStartColor="#CAE4CB" />

        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/change"
            android:textColor="@color/button_text_color"
            android:textSize="14sp"
            app:buttonCornerRadius="50dp"
            app:buttonGradientEndColor="#6ACF10"
            app:buttonGradientStartColor="#CAE4CB" />

        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/delete"
            android:textColor="@color/button_text_color"
            android:textSize="14sp"
            app:buttonCornerRadius="50dp"
            app:buttonGradientEndColor="#6ACF10"
            app:buttonGradientStartColor="#CAE4CB" />

    </LinearLayout>
</LinearLayout>